Wire up begin/end station closures